; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bsnmp/snmpd/extr_export.c_string_get.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bsnmp/snmpd/extr_export.c_string_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snmp_value = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32*, i64 }

@SNMP_ERR_NOERROR = common dso_local global i32 0, align 4
@SNMP_ERR_RES_UNAVAIL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @string_get(%struct.snmp_value* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.snmp_value*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store %struct.snmp_value* %0, %struct.snmp_value** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32*, i32** %6, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %20

10:                                               ; preds = %3
  %11 = load %struct.snmp_value*, %struct.snmp_value** %5, align 8
  %12 = getelementptr inbounds %struct.snmp_value, %struct.snmp_value* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 1
  store i64 0, i64* %14, align 8
  %15 = load %struct.snmp_value*, %struct.snmp_value** %5, align 8
  %16 = getelementptr inbounds %struct.snmp_value, %struct.snmp_value* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  store i32* null, i32** %18, align 8
  %19 = load i32, i32* @SNMP_ERR_NOERROR, align 4
  store i32 %19, i32* %4, align 4
  br label %58

20:                                               ; preds = %3
  %21 = load i32, i32* %7, align 4
  %22 = icmp eq i32 %21, -1
  br i1 %22, label %23, label %26

23:                                               ; preds = %20
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @strlen(i32* %24)
  store i32 %25, i32* %7, align 4
  br label %26

26:                                               ; preds = %23, %20
  %27 = load i32, i32* %7, align 4
  %28 = sext i32 %27 to i64
  %29 = call i32* @malloc(i64 %28)
  %30 = load %struct.snmp_value*, %struct.snmp_value** %5, align 8
  %31 = getelementptr inbounds %struct.snmp_value, %struct.snmp_value* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 0
  store i32* %29, i32** %33, align 8
  %34 = icmp eq i32* %29, null
  br i1 %34, label %35, label %41

35:                                               ; preds = %26
  %36 = load %struct.snmp_value*, %struct.snmp_value** %5, align 8
  %37 = getelementptr inbounds %struct.snmp_value, %struct.snmp_value* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 0
  %39 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %38, i32 0, i32 1
  store i64 0, i64* %39, align 8
  %40 = load i32, i32* @SNMP_ERR_RES_UNAVAIL, align 4
  store i32 %40, i32* %4, align 4
  br label %58

41:                                               ; preds = %26
  %42 = load i32, i32* %7, align 4
  %43 = sext i32 %42 to i64
  %44 = load %struct.snmp_value*, %struct.snmp_value** %5, align 8
  %45 = getelementptr inbounds %struct.snmp_value, %struct.snmp_value* %44, i32 0, i32 0
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %45, i32 0, i32 0
  %47 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %46, i32 0, i32 1
  store i64 %43, i64* %47, align 8
  %48 = load %struct.snmp_value*, %struct.snmp_value** %5, align 8
  %49 = getelementptr inbounds %struct.snmp_value, %struct.snmp_value* %48, i32 0, i32 0
  %50 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %49, i32 0, i32 0
  %51 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %50, i32 0, i32 0
  %52 = load i32*, i32** %51, align 8
  %53 = load i32*, i32** %6, align 8
  %54 = load i32, i32* %7, align 4
  %55 = sext i32 %54 to i64
  %56 = call i32 @memcpy(i32* %52, i32* %53, i64 %55)
  %57 = load i32, i32* @SNMP_ERR_NOERROR, align 4
  store i32 %57, i32* %4, align 4
  br label %58

58:                                               ; preds = %41, %35, %10
  %59 = load i32, i32* %4, align 4
  ret i32 %59
}

declare dso_local i32 @strlen(i32*) #1

declare dso_local i32* @malloc(i64) #1

declare dso_local i32 @memcpy(i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
